# company_api

./: .dockerignore  .enev  .env_start_app  .gitignore  Dockerfile  docker-compose.yml  gunicorn.service  key_git_script  nginx  pyproject.toml  requirements.in  requirements.txt  sinuous-grove-405612-a7d9d516c960.json  start_uvicorn  users_data.json
.github/workflows/: company.yml  main.yml  test_server.yml
_log_config/: log_config.py
app/: main.py  test_main.py
app/admin/: room.py  test_btanche  user.py
app/admin/company/: company.py
app/admin/room/: room.py
app/admin/user/: user.py
app/auth/: oauth2.py
app/config/: config.py  created_image.py  crypto_encrypto.py  default_info.py  hello.py  init_users.py  random_images.py  scheduler.py  start_schema.py  utils.py
app/database/: async_db.py  database.py
app/mail/: send_mail.py
app/models/: company_model.py  following_model.py  image_model.py  messages_model.py  password_model.py  reports_model.py  room_model.py  user_model.py
app/routers/AI/: ai_functions.py  hello.py  (+3 more)
app/schemas/: company.py  firebase.py  following.py  invitaton.py  message.py  private.py  report.py  room.py  token.py  user.py
app/settings/: get_info.py
app/superAdmin/: company.py
contact-form/: index.html  mainCF.js
static/: script.js
templates/: blocked_account.html  email.html  email_update.html  error_page.html  home_page.html  mail_change_password.html  password_reset.html  password_reset_mobile.html  success-page.html  success_registration.html  window_new_password.html
tests/tests_all/: test_user_and_room_v2.py
(+37 files in other folders)
