[project]
name = "api"
version = "0.1.0"
description = "This is API for Sayorama project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "b2sdk>=2.6.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.3",
    "faker>=30.8.2",
    "fastapi-limiter>=0.1.6",
    "fastapi-mail>=1.4.1",
    "fastapi>=0.115.4",
    "greenlet>=3.1.1",
    "openai>=1.54.2",
    "passlib>=1.7.4",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "ruff>=0.7.2",
    "sentry-sdk>=2.18.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]
